--- a/_includes/workshop_calendar.html
+++ b/_includes/workshop_calendar.html
@@ -5,4 +5,8 @@ from here: https://stackoverflow.com/a/37659516/1113276
 
 {% assign final_day = page.enddate | date: '%s' | plus:86400 | date: '%F' | replace: "-", "" %}
 
+{% if site.carpentry == "bssw" %}
+<a href="//calendar.google.com/calendar/render?action=TEMPLATE&text=Better Scientific Software Tutorial&dates={{ page.startdate   | replace: "-", "" }}/{{ final_day }}&trp=false&sprop&sprop=name:&sf=true&output=xml&location={{ page.address }}&details=Better Scientific Software Tutorial at {{ page.venue }}">Add to your Google Calendar.</a>
+{% else %}
 <a href="//calendar.google.com/calendar/render?action=TEMPLATE&text={% if site.carpentry == "swc" %}Software{% elsif site.carpentry == "lc" %}Library{% elsif site.carpentry == "dc" %}Data{% endif %} Carpentry Workshop&dates={{ page.startdate   | replace: "-", "" }}/{{ final_day }}&trp=false&sprop&sprop=name:&sf=true&output=xml&location={{ page.address }}&details={% if site.carpentry == "swc" %}Software{% elsif site.carpentry == "lc" %}Library{% elsif site.carpentry == "dc" %}Data{% endif %} Carpentry Workshop at {{ page.venue }}">Add to your Google Calendar.</a>
+{% endif %}
