Adapt content for BSSw tutorials, using the SC20 tutorial as the example case.

--- a/_includes/favicons.html
+++ b/_includes/favicons.html
@@ -8,6 +8,8 @@
 {% assign carpentry = 'Library Carpentry' %}
 {% elsif site.carpentry == 'cp' %}
 {% assign carpentry = 'The Carpentries' %}
+{% elsif site.carpentry == 'bssw' %}
+{% assign carpentry = 'Better Scientific Software Tutorial' %}
 {% endif %}
 
     <!-- Favicons for everyone -->
