Add BSSw.io RSS feed link and icon.

--- a/_includes/bssw/followup.html
+++ b/_includes/bssw/followup.html
@@ -9,5 +9,6 @@
 </p>
 <p>
     To follow updates on the <a href="https://bssw.io">Better Scientific Software</a> site, 
-    <a href="https://bssw.io/pages/receive-our-email-digest">subscribe to our monthly digest</a>.
+    <a href="https://bssw.io/pages/receive-our-email-digest">subscribe to our monthly digest</a> or our <a href="https://bssw.io/items.rss">RSS feed</a>. 
+    <a href="https://bssw.io/items.rss"><img src="assets/img/Generic_Feed-icon.svg" alt="RSS feed" style="height: 1em" /></a>
 </p>
