--- a/_includes/install_instructions/videoconferencing.html
+++ b/_includes/install_instructions/videoconferencing.html
@@ -1,4 +1,10 @@
-
+{% if page.in_conference %}
+<h3 id="videoconferencing">Videoconference Access</h3>
+<p>
+  Connection information will be provided by the conference organizers
+  in conjunction with your registration.
+</p>
+{% else %}
 <h3 id="videoconferencing">Install the videoconferencing client</h3>
 
 {% comment %}
@@ -42,3 +48,4 @@ if you do not use Zoom
   </ul>
   This <a href="https://carpentries.org/blog/2020/06/online-workshop-logistics-and_screen-layouts/" target="_blank">blog post</a> includes detailed information on how to set up your screen to follow along during the workshop.
 </p>
+{% endif %}
