--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -95,6 +95,18 @@
             {% endfor %}
           </ul>
         </li>
+  {% endif %}
+  {% comment %}For BSSw we want to expose *only* those pages listed in site.extras_order{% endcomment %}
+  {% if site.carpentry == "bssw" and site.extras_order %}
+        <li class="dropdown">
+          <a href="{{ relative_root_path }}/" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Extras <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            {% for lesson_extra in site.extras_order %}
+              {% assign extra = site.extras | where: "slug", lesson_extra | first %}
+            <li><a href="{{ relative_root_path }}{{ extra.url }}">{{ extra.title }}</a></li>
+            {% endfor %}
+          </ul>
+        </li>
 	{% endif %}
 
 	{% comment %} Always show license. {% endcomment %}
